--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="https://www.facebook.com/jfj.yeamim?mibextid=JRoKGi"data-aos='fade-up' data-aos-duration="1500" data-aos-delay="1300"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://www.instagram.com/abubokoryeamim?igsh=MTI3ZGU5ZHp6d2JsYw=="data-aos='fade-up' data-aos-duration="1500" data-aos-delay="1400"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/yeamim111/"data-aos='fade-up' data-aos-duration="1500" data-aos-delay="1500"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://github.com/yeamim11/yeamim11"data-aos='fade-up' data-aos-duration="1500" data-aos-delay="1600"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://github.com/yeamim11"data-aos='fade-up' data-aos-duration="1500" data-aos-delay="1600"><i class="fa-brands fa-github"></i></a>
                 </div>
 
                 <a href="https://drive.google.com/file/d/1uXTrn9Ezab3b-hhdI118EKpzs2aIy_oF/view?usp=sharing">
